<?xml version="1.0"?>
<package format="2">
  <name>me495_threads</name>
  <version>0.0.0</version>
  <description>An exploration of the rospy threading model </description>

  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <url type="website">http://nu-msr.github.io/me495_site</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
